--- a/FinalProject.ipynb
+++ b/FinalProject.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled135.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOOu4kyc2OfZ8YZtai+xL9g",
+      "authorship_tag": "ABX9TyOoSfuJ38QxWIU4a7TrXKxB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,18 +36,18 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8844f3e8-08af-4508-a058-44980990971c"
+        "outputId": "ca84fd0c-76ac-4943-8ca8-6d9ee9f955fb"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ],
           "name": "stdout"
         }
@@ -60,12 +60,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zN6CmvXlAoSi",
-        "outputId": "b369738e-c985-4ea8-c322-25baa13b5c73"
+        "outputId": "23f7c628-5c3b-46f8-c37c-f7500956a61d"
       },
       "source": [
         "pip install tf2_yolov4"
       ],
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -74,9 +74,9 @@
             "  Downloading https://files.pythonhosted.org/packages/6a/61/24a0aed949afc7715b767160abc241c7cd9e7ae9c34e4f8b42c1d6924e63/tf2_yolov4-0.1.0-py3-none-any.whl\n",
             "Collecting tensorflow-addons>=0.9.1\n",
             "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/66/4b/e893d194e626c24b3df2253066aa418f46a432fdb68250cde14bf9bb0700/tensorflow_addons-0.13.0-cp37-cp37m-manylinux2010_x86_64.whl (679kB)\n",
-            "\u001b[K     |████████████████████████████████| 686kB 12.7MB/s \n",
-            "\u001b[?25hRequirement already satisfied: click>=6.7 in /usr/local/lib/python3.7/dist-packages (from tf2_yolov4) (7.1.2)\n",
-            "Requirement already satisfied: numpy>=1.10 in /usr/local/lib/python3.7/dist-packages (from tf2_yolov4) (1.19.5)\n",
+            "\u001b[K     |████████████████████████████████| 686kB 11.2MB/s \n",
+            "\u001b[?25hRequirement already satisfied: numpy>=1.10 in /usr/local/lib/python3.7/dist-packages (from tf2_yolov4) (1.19.5)\n",
+            "Requirement already satisfied: click>=6.7 in /usr/local/lib/python3.7/dist-packages (from tf2_yolov4) (7.1.2)\n",
             "Requirement already satisfied: typeguard>=2.7 in /usr/local/lib/python3.7/dist-packages (from tensorflow-addons>=0.9.1->tf2_yolov4) (2.7.1)\n",
             "Installing collected packages: tensorflow-addons, tf2-yolov4\n",
             "Successfully installed tensorflow-addons-0.13.0 tf2-yolov4-0.1.0\n"
@@ -127,7 +127,7 @@
         "model.load_weights('/content/drive/MyDrive/Pretrained/yolov4.h5')\n",
         "\n"
       ],
-      "execution_count": 23,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -157,7 +157,7 @@
         "        print('Error opening video stream or file')\n",
         "    else: \n",
         "      fourcc = cv2.VideoWriter_fourcc(*'XVID')\n",
-        "      out = cv2.VideoWriter('output.avi',fourcc, 20, (1024,768))\n",
+        "      out = cv2.VideoWriter('output.avi',fourcc, 24, (1024,768))\n",
         "      while (True):\n",
         "          ret, frame = cap.read()\n",
         "          if ret==True:\n",
@@ -169,28 +169,27 @@
         "                image_rect = frame.copy()\n",
         "                list_indexes = list(itertools.combinations(range(len(transformed_points)), 2))\n",
         "                x_y_ = []\n",
-        "                for i,pair in enumerate(itertools.combinations(transformed_points, r=2)):\n",
-        "                    if np.sqrt( (pair[0][0] - pair[1][0])**2 + (pair[0][1] - pair[1][1])**2 ) < int(distance_minimum):\n",
-        "                    #change color top view\n",
-        "                         index_pt1 = list_indexes[i][0]\n",
-        "                         index_pt2 = list_indexes[i][1]\n",
-        "                    #change color original frame\n",
-        "                         DrawnRectangel(boxes,image_rect,index_pt1,(0,0,255))\n",
-        "                         DrawnRectangel(boxes,image_rect,index_pt2,(0,0,255))\n",
-        "                         x_y_.append(index_pt1)\n",
-        "                         x_y_.append(index_pt2)\n",
+        "                # for i,pair in enumerate(itertools.combinations(transformed_points, r=2)):\n",
+        "                #     if np.sqrt( (pair[0][0] - pair[1][0])**2 + (pair[0][1] - pair[1][1])**2 ) < int(distance_minimum):\n",
+        "                #     #change color top view\n",
+        "                #          index_pt1 = list_indexes[i][0]\n",
+        "                #          index_pt2 = list_indexes[i][1]\n",
+        "                #     #change color original frame\n",
+        "                #          DrawnRectangel(boxes,image_rect,index_pt1,(0,0,255))\n",
+        "                #          DrawnRectangel(boxes,image_rect,index_pt2,(0,0,255))\n",
+        "                #          x_y_.append(index_pt1)\n",
+        "                #          x_y_.append(index_pt2)\n",
         "\n",
-        "                # for i in range(0,len(transformed_points)):\n",
-        "                #      sub_vec = transformed_points[i] - transformed_points[i+1:]\n",
-        "                #      distance = np.sqrt(sub_vec[:,0]**2+sub_vec[:,1]**2)\n",
-        "                #      selected_points = np.array(np.where(distance<distance_minimum))[0]\n",
-        "                #      print(selected_points)\n",
-        "                #      if (len(selected_points)>0):\n",
-        "                #          for j in selected_points:\n",
-        "                #              DrawnRectangel(boxes,image_rect,i+j+1,(0,0,255))\n",
-        "                #              x_y_.append(i+j+1)\n",
-        "                #          DrawnRectangel(boxes,image_rect,i,(0,0,255))\n",
-        "                #          x_y_.append(i)\n",
+        "                for i in range(0,len(transformed_points)):\n",
+        "                      sub_vec = transformed_points[i] - transformed_points[i+1:]\n",
+        "                      distance = np.sqrt(sub_vec[:,0]**2+sub_vec[:,1]**2)\n",
+        "                      selected_points = np.array(np.where(distance<distance_minimum))[0]\n",
+        "                      if (len(selected_points)>0):\n",
+        "                          for j in selected_points:\n",
+        "                              DrawnRectangel(boxes,image_rect,i+j+1,(0,0,255))\n",
+        "                              x_y_.append(i+j+1)\n",
+        "                          DrawnRectangel(boxes,image_rect,i,(0,0,255))\n",
+        "                          x_y_.append(i)\n",
         "                diff = np.setdiff1d(list(range(0,len(boxes))),np.unique(x_y_))\n",
         "                for i in diff: DrawnRectangel(boxes,image_rect,i,(0,255,0))\n",
         "                out.write(image_rect)\n",
@@ -234,7 +233,7 @@
         "    transformed_points = transformed_points.reshape(transformed_points.shape[0],transformed_points.shape[2])\n",
         "    return transformed_points"
       ],
-      "execution_count": 14,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -253,7 +252,7 @@
         "D = [900,450]\n",
         "M = MatrixCreation(A,B,C,D)"
       ],
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -264,7 +263,7 @@
       "source": [
         "video_processing(model,video_path)"
       ],
-      "execution_count": 15,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -440,7 +439,7 @@
         "       else: break\n",
         "    out.release()"
       ],
-      "execution_count": 24,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -496,32 +495,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "KgzwETdBbC2D",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "152745fe-a6a0-4b32-90ba-7bd864140e93"
-      },
-      "source": [
-        "print(c)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[[ 0.56846593 -1.51326264]\n",
-            " [ 1.60869754 -1.43670253]\n",
-            " [-0.74336714 -0.04082484]\n",
-            " [-0.02114511 -0.61034175]]\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "rKKuEqYkam-J"
       },
       "source": [
@@ -537,69 +510,6 @@
       },
       "source": [
         "c = np.sqrt(c)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "28GNaCDEbjeY",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "57f23125-576d-4822-c749-b29416cffb52"
-      },
-      "source": [
-        "c"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([1.61651394, 2.15685464, 0.74448732, 0.61070792])"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 51
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "6XEAEEQXbkIs",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "b1bf8930-b593-4b8c-de20-1da87adf1c71"
-      },
-      "source": [
-        "index = np.array(np.where(c<2))[0]\n",
-        "print(index)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[0 2 3]\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "2g_FzSpMeApI"
-      },
-      "source": [
-        ""
       ],
       "execution_count": null,
       "outputs": []
