--- a/FinalProject.ipynb
+++ b/FinalProject.ipynb
@@ -224,19 +224,7 @@
         "                         DrawnRectangel(boxes,image_rect,index_pt2,(0,0,255))\n",
         "                         x_y_.append(index_pt1)\n",
         "                         x_y_.append(index_pt2)\n",
-        "\n",
-        "                # for i in range(0,len(transformed_points)-1):\n",
-        "                #       sub_vec = (transformed_points[i] - transformed_points[i+1:]) \n",
-        "                #       distance = np.sqrt((sub_vec[:,0]*real_width/pixel_width)**2+(sub_vec[:,1]*real_height/pixel_height)**2)\n",
-        "                #       selected_points = np.array(np.where(distance<distance_minimum))[0]\n",
-        "                #       if (len(selected_points)>0):\n",
-        "                #           for j in selected_points:\n",
-        "                #               DrawnRectangel(boxes,image_rect,i+j+1,(0,0,255))\n",
-        "                #               x_y_.append(i+j+1)\n",
-        "                #           DrawnRectangel(boxes,image_rect,i,(0,0,255))\n",
-        "                #           x_y_.append(i)\n",
-        "\n",
-        "                #select points to draw green \n",
+        "                #select points to draw green box and green circle \n",
         "                diff = np.setdiff1d(list(range(0,len(boxes))),np.unique(x_y_))\n",
         "                for i in diff:\n",
         "                   DrawnRectangel(boxes,image_rect,i,(0,255,0))\n",
