--- a/FinalProject.ipynb
+++ b/FinalProject.ipynb
@@ -35,7 +35,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fdbb1ab8-d003-402d-ed89-33b46445f366"
+        "outputId": "4a3639bd-eb18-4a25-9d6a-fdb88938555b"
       },
       "source": [
         "from google.colab import drive\n",
@@ -84,7 +84,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7f74a3ef-aecb-4b0d-ce7a-0efe3bf925c8"
+        "outputId": "18b01329-73f7-41a0-db9c-f3e1276c3f7c"
       },
       "source": [
         "%cd /content/drive/My\\ Drive/darknet\n",
@@ -1274,11 +1274,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "EHRAkm-sw5h5",
-        "outputId": "2f75a89b-9c0b-4e94-bddc-f3242c57a6ef",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 286
-        }
+        },
+        "outputId": "96fbe3b4-4fec-40aa-ec41-864a1ffd9c98"
       },
       "source": [
         "image = cv2.imread('/content/FudanPed00017.png')\n",
@@ -1289,7 +1289,7 @@
         "plt.imshow(image)\n",
         "plt.show()   "
       ],
-      "execution_count": 23,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -1316,45 +1316,114 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Mg_VdbmZyeHj"
-      },
-      "source": [
-        "x_ = boxes[:,0]+(boxes[:,2]-boxes[:,0]) / 2\n",
-        "y_ = boxes[:,1]+(boxes[:,3]-boxes[:,1]) / 2\n",
-        "x_ = np.expand_dims(x_,axis = 1)\n",
-        "y_ = np.expand_dims(y_,axis = 1) \n",
-        "centroids = np.concatenate((x_,y_),axis=1)"
-      ],
-      "execution_count": 24,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Iaw1tNCJ27Nn",
-        "outputId": "498cc5b2-0f07-4ca0-8dfa-1229ac090ad1",
+        "id": "ruHTGdfLA9Pk",
+        "outputId": "6922fb14-6e04-4bce-f362-55465f0f6b36",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
-        "centroids"
+        "def Sort_Array(array):\n",
+        "  for i in range(0,len(array)-1):\n",
+        "    for j in range(i+1,len(array)):\n",
+        "       if array[j][0] < array[i][0] :   \n",
+        "          array[i][0],array[j][0] = array[j][0],array[i][0]\n",
+        "          array[i][1],array[j][1] = array[j][1],array[i][1]\n",
+        "       elif (array[i][0] == array[j][0]) and (array[j][1] < array[i][1]) :   \n",
+        "          array[i][0],array[j][0] = array[j][0],array[i][0]\n",
+        "          array[i][1],array[j][1] = array[j][1],array[i][1]\n",
+        "  return array\n",
+        "\n",
+        "def IOU_Calculation(threshold=0.5):\n",
+        "  \n",
+        "\n",
+        "def Find_leak(arr,larger_arr):\n",
+        "  saved_idx = np.array([-1]*len(larger_arr))\n",
+        "  for i in range(0,len(arr)):\n",
+        "     sub_arr = arr[i] - larger_arr\n",
+        "     sqrt_arr = np.sqrt(sub_arr[:,0]**2+sub_arr[:,1]**2)\n",
+        "     min_idx = np.argmin(sqrt_arr)\n",
+        "        \n",
+        "     saved_idx[i] = min_idx\n",
+        "  num_leak = len(np.where(save_idx!=-1)[0])\n",
+        "  return num_leak      \n",
+        "\n",
+        "def Match_Array(array1,array2):\n",
+        "  if len(array1)>len(array2): array = array1.copy()\n",
+        "  else: array = array2.copy()\n",
+        "  \n",
+        "  for i in range(0,len(array)):\n",
+        "       \n",
+        "    \n"
       ],
-      "execution_count": 25,
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[  0.      55.6875]\n",
+            " [111.5625  54.    ]\n",
+            " [115.5     54.    ]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sE30aIxlTa5C",
+        "outputId": "4a2ce74f-d757-43d6-e3de-70d11fe26cff",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "arr = np.array([1,2,4,33,1])\n",
+        "len(np.where(arr!=1)[0])"
+      ],
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[138.25   , 166.5    ],\n",
-              "       [ 12.25   ,  84.09375],\n",
-              "       [179.15625, 189.28125]])"
+              "3"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 25
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hc3sR-rxJ9Uw",
+        "outputId": "0b4769ee-e110-4bf9-e8da-8f9a2f29fcee",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "a = np.array([[1,2],[3,4]])\n",
+        "b = np.array([[1,1],[2,5],[3,5]])\n",
+        "sub = b[0] - a\n",
+        "sqrt_array = np.sqrt(sub[:,0]**2 + sub[:,1]**2)\n",
+        "print(sqrt_array)\n",
+        "print(np.argmin(sqrt_array)) "
+      ],
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1.         3.60555128]\n",
+            "0\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -1362,17 +1431,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "QtW-3gLixRII",
-        "outputId": "32c5e71d-9bc8-42a7-c3af-803e51466401",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "32c5e71d-9bc8-42a7-c3af-803e51466401"
       },
       "source": [
         "with open('/content/drive/MyDrive/FudanPed00001.txt','r') as f:\n",
         "   box = f.read()\n",
         "   print(box)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
