--- a/FinalProject.ipynb
+++ b/FinalProject.ipynb
@@ -14,8 +14,7 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "accelerator": "GPU"
+    }
   },
   "cells": [
     {
@@ -35,13 +34,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4a3639bd-eb18-4a25-9d6a-fdb88938555b"
+        "outputId": "20bdeeef-a726-45bc-c3b1-8e1577f1aeeb"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 1,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -84,7 +83,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "18b01329-73f7-41a0-db9c-f3e1276c3f7c"
+        "outputId": "a877cca6-766e-4977-a832-30c95162962c"
       },
       "source": [
         "%cd /content/drive/My\\ Drive/darknet\n",
@@ -97,6 +96,7 @@
           "output_type": "stream",
           "text": [
             "/content/drive/My Drive/darknet\n",
+            "rm: cannot remove 'darknet': No such file or directory\n",
             "chmod +x *.sh\n",
             "g++ -std=c++11 -std=c++11 -Iinclude/ -I3rdparty/stb/include -DOPENCV `pkg-config --cflags opencv4 2> /dev/null || pkg-config --cflags opencv` -DGPU -I/usr/local/cuda/include/ -DCUDNN -DCUDNN_HALF -Wall -Wfatal-errors -Wno-unused-result -Wno-unknown-pragmas -fPIC -Ofast -DOPENCV -DGPU -DCUDNN -I/usr/local/cudnn/include -DCUDNN_HALF -fPIC -c ./src/image_opencv.cpp -o obj/image_opencv.o\n",
             "\u001b[01m\u001b[K./src/image_opencv.cpp:\u001b[m\u001b[K In function ‘\u001b[01m\u001b[Kvoid draw_detections_cv_v3(void**, detection*, int, float, char**, image**, int, int)\u001b[m\u001b[K’:\n",
@@ -1289,7 +1289,7 @@
         "plt.imshow(image)\n",
         "plt.show()   "
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1317,10 +1317,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "ruHTGdfLA9Pk",
-        "outputId": "6922fb14-6e04-4bce-f362-55465f0f6b36",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6922fb14-6e04-4bce-f362-55465f0f6b36"
       },
       "source": [
         "def Sort_Array(array):\n",
@@ -1334,29 +1334,58 @@
         "          array[i][1],array[j][1] = array[j][1],array[i][1]\n",
         "  return array\n",
         "\n",
-        "def IOU_Calculation(threshold=0.5):\n",
-        "  \n",
+        "def IOU_Calculation(gt_bbox,pred_bbox):\n",
+        "  xmin_gt,ymin_gt,xmax_gt,ymax_gt = gt_bbox\n",
+        "  xmin_pre,ymin_pre,xmax_pre,ymax_pre = pred_bbox\n",
+        "  if (xmax_gt < xmin_pre) or (ymax_gt<ymin_pre) or (xmin_gt > xmax_pre) or (ymin_gt>ymax_pre): return 0.0\n",
+        "  GT_bbox_area = (xmax_gt - xmin_gt + 1 ) * (ymax_gt - ymin_gt + 1 )\n",
+        "  Pre_bbox_area = (xmax_pre - xmin_pre + 1 ) * (ymax_pre - ymin_pre + 1 )\n",
+        "  xmin = max(xmin_gt,xmin_pre)\n",
+        "  ymin = max(ymin_gt,ymin_pre)\n",
+        "  xmax = min(xmax_gt,xmax_pre)\n",
+        "  ymax = min(ymax_gt,ymax_pre)\n",
+        "  intersection_area = (xmax-xmin+1)*(ymax-ymin+1)\n",
+        "  union_area = GT_bbox_area + Pre_bbox_area - intersection_area\n",
+        "  return intersection_area/union_area\n",
         "\n",
-        "def Find_leak(arr,larger_arr):\n",
+        "def TP_FP_FN(arr,larger_arr):\n",
         "  saved_idx = np.array([-1]*len(larger_arr))\n",
+        "  TP,FP,FN = 0\n",
         "  for i in range(0,len(arr)):\n",
         "     sub_arr = arr[i] - larger_arr\n",
         "     sqrt_arr = np.sqrt(sub_arr[:,0]**2+sub_arr[:,1]**2)\n",
         "     min_idx = np.argmin(sqrt_arr)\n",
-        "        \n",
         "     saved_idx[i] = min_idx\n",
-        "  num_leak = len(np.where(save_idx!=-1)[0])\n",
-        "  return num_leak      \n",
+        "     IOU = IOU_Calculation(gt_box[min_idx],boxes[i])\n",
+        "     if IOU >=0.5: TP+=1\n",
+        "     else: FP+=1\n",
+        "  FN = len(np.where(save_idx!=-1)[0])\n",
+        "  return (TP,FP,FN)      \n",
         "\n",
-        "def Match_Array(array1,array2):\n",
-        "  if len(array1)>len(array2): array = array1.copy()\n",
-        "  else: array = array2.copy()\n",
-        "  \n",
-        "  for i in range(0,len(array)):\n",
-        "       \n",
-        "    \n"
+        "def Image_to_Image(array1,array2):\n",
+        "  if len(array1)>len(array2): TP,FP,FN = TP_FP_FN (array2,array1)\n",
+        "  else: TP,FP,FN = TP_FP_FN(array1,array2) \n",
+        "  try: precision = TP / (TP+FP)\n",
+        "  except ZeroDivisionError: precision=0.0\n",
+        "  try: recall = TP / (TP+FN)\n",
+        "  except ZeroDivisionError: recall=0.0\n",
+        "  return (precision,recall)\n",
+        "\n",
+        "def Read_Txt(file_path):  \n",
+        "    with open(path,'r') as f:\n",
+        "      lines = f.readlines()\n",
+        "      bbox_gt = np.zeros((len(lines),4))\n",
+        "      for i,line in enumerate(lines):\n",
+        "        coordinate = line.split()\n",
+        "        xmin,ymin,xmax,ymax = float(coordinate[1]),float(coordinate[2]),float(coordinate[3]),float(coordinate[4])\n",
+        "        bbox_gt[i][0:4] = [xmin,ymin,xmax,ymax]\n",
+        "   return bbox_gt\n",
+        "\n",
+        "def mAP(precision_arr,recall_arr):\n",
+        "  recall_arr = np.sort(recall_arr)\n",
+        "  "
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1373,16 +1402,26 @@
       "cell_type": "code",
       "metadata": {
         "id": "sE30aIxlTa5C",
-        "outputId": "4a2ce74f-d757-43d6-e3de-70d11fe26cff",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4a2ce74f-d757-43d6-e3de-70d11fe26cff"
       },
       "source": [
-        "arr = np.array([1,2,4,33,1])\n",
-        "len(np.where(arr!=1)[0])"
+        "list_path = os.list_dir('')\n",
+        "precision_arr = []\n",
+        "recall_arr = []\n",
+        "for path in list_path:\n",
+        "   bbox_gt = Read_Txt(path)\n",
+        "   boxes = Read_Img('')\n",
+        "   precision,recall = Image_to_Image(bbox_gt,boxes)\n",
+        "   precision_arr.append(precision)\n",
+        "   recall_arr.append(recall)\n",
+        "\n",
+        "\n",
+        "\n"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1402,10 +1441,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "hc3sR-rxJ9Uw",
-        "outputId": "0b4769ee-e110-4bf9-e8da-8f9a2f29fcee",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "0b4769ee-e110-4bf9-e8da-8f9a2f29fcee"
       },
       "source": [
         "a = np.array([[1,2],[3,4]])\n",
@@ -1415,7 +1454,7 @@
         "print(sqrt_array)\n",
         "print(np.argmin(sqrt_array)) "
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1434,25 +1473,33 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "32c5e71d-9bc8-42a7-c3af-803e51466401"
+        "outputId": "9dc8e5b9-6436-44ad-d5ab-ffbf56d2d9dc"
       },
       "source": [
-        "with open('/content/drive/MyDrive/FudanPed00001.txt','r') as f:\n",
-        "   box = f.read()\n",
-        "   print(box)"
+        "\n"
       ],
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "1 0.415027 0.571828 0.243292 0.468284\n",
-            "1 0.849732 0.613806 0.218247 0.585821\n",
-            "\n"
+            "[[0.415027 0.571828 0.243292 0.468284]\n",
+            " [0.849732 0.613806 0.218247 0.585821]]\n"
           ],
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GgCHy4opZAxr"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
