--- a/FinalProject.ipynb
+++ b/FinalProject.ipynb
@@ -34,13 +34,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "20bdeeef-a726-45bc-c3b1-8e1577f1aeeb"
+        "outputId": "f06fc318-8c4a-4af5-f446-762bf3b3a5b7"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -90,7 +90,7 @@
         "!rm darknet\n",
         "!make"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -783,7 +783,7 @@
         "!sed -i 's/CUDNN_HALF=0/CUDNN_HALF=1/' Makefile\n",
         "!sed -i 's/LIBSO=0/LIBSO=1/' Makefile"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -936,7 +936,7 @@
         "    vid.release()\n",
         "    cv2.destroyAllWindows() \n"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -953,7 +953,7 @@
         "height = network_height(network)\n",
         "\n"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1417,6 +1417,16 @@
         "   precision,recall = Image_to_Image(bbox_gt,boxes)\n",
         "   precision_arr.append(precision)\n",
         "   recall_arr.append(recall)\n",
+        "prec_at_rec = []\n",
+        "for recall_level in np.linspace(0.0,1.0,11):\n",
+        "  try:\n",
+        "    args = np.where(recall_arr>recall_level)\n",
+        "    prec = max(precision_arr[args])\n",
+        "  except:\n",
+        "    prec = 0.0\n",
+        "  pret_at_rec.append(prec)\n",
+        "avg_prec = np.mean(prec_at_rec)\n",
+        "print(avg_prec)  \n",
         "\n",
         "\n",
         "\n"
@@ -1478,7 +1488,7 @@
       "source": [
         "\n"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
